@@ -1,3 +1,9 @@
+2006-10-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>
+
+	* src/labyrinth.py:
+	fix i18n stuff.  Hopefully.
+
+
 2006-10-04 Don Scorgie <DonScorgie@Blueyonder.co.uk>
 
 	* Browser.py:
